convert/objects/SelaProduct__c.object
<CustomObject>
    <label>SELA Product</label>
    <nameField>
        <label>SELA Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AddOnSubscriptionMonthly__c</fullName>
        <label>Add On Subscription (Monthly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AddOnSubscriptionYearly__c</fullName>
        <label>Add On Subscription (Yearly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCGroup__c</fullName>
        <label>DC Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCrate__c</fullName>
        <label>DC rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ListDcRate__c</fullName>
        <label>List DC Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ListPriceMonthly__c</fullName>
        <label>ListPrice (Monthly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ListPriceYearly__c</fullName>
        <label>ListPrice (Yearly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Num__c</fullName>
        <label>Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remain_Quantity__c</fullName>
        <label>Remain Quantity</label>
        <summarizedField>SelaProductLineItem__c.Quantity__c</summarizedField>
        <summaryForeignKey>SelaProductLineItem__c.SELAProduct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscriptionDcRate__c</fullName>
        <label>SubscriptionDcRate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SubscriptionMonthly__c</fullName>
        <label>Subscription (Monthly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubscriptionYearly__c</fullName>
        <label>Subscription (Yearly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalQuantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core Org</fullName>
                </value>
                <value>
                    <fullName>Core Org-UE</fullName>
                </value>
                <value>
                    <fullName>MC Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TotalQuantity__c</columns>
        <columns>SubscriptionYearly__c</columns>
        <columns>AddOnSubscriptionYearly__c</columns>
        <columns>AT__c</columns>
        <columns>EM__c</columns>
        <columns>PSP__c</columns>
        <columns>SB__c</columns>
        <columns>ListPriceYearly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>